--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "requests>=2.31.0",
     "pydicom>=3.0.1",
     "pillow>=12.0.0",
+    "numpy>=1.24.0",
 ]
 
 [project.optional-dependencies]
